# telegram-bot-simple

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.project  flake.nix  package.yaml  req.out  req.txt  stack.yaml  telegram-bot-simple.cabal  types.out  types.txt
.github/workflows/: ci.yml
examples/: EchoBot.hs  EchoBotWebhook.hs  GameBot.hs  TodoBot.hs  TodoBotWebhook.hs  game-bot-settings.dhall  game-server-settings.dhall
examples/game/: analytics.dhall  questions.dhall  types.dhall  users.dhall
scripts/: gen.hs
src/Telegram/Bot/: API.hs  Handler.hs  Simple.hs
src/Telegram/Bot/API/: Chat.hs  Forum.hs  Games.hs  GettingUpdates.hs  InlineMode.hs  JsonExt.hs  MakingRequests.hs  Methods.hs  MultipartFormData.hs  Passport.hs  Payments.hs  Stickers.hs  Types.hs  UpdatingMessages.hs  WebApps.hs  WebHooks.hs  Webhook.hs
src/Telegram/Bot/API/InlineMode/: InlineQueryResult.hs  InputMessageContent.hs
src/Telegram/Bot/API/Internal/: Multipart.hs  Utils.hs
src/Telegram/Bot/API/Methods/: ApproveChatJoinRequest.hs  BanChatSenderChat.hs  CreateChatInviteLink.hs  DeleteChatPhoto.hs  DeleteMessage.hs  DeleteMyCommands.hs  ExportChatInviteLink.hs  GetChat.hs  GetChatAdministrators.hs  GetChatMenuButton.hs  GetFile.hs  GetMe.hs  GetUserProfilePhotos.hs  RestrictChatMember.hs  RevokeChatInviteLink.hs  SendAudio.hs  SendDice.hs  SendLocation.hs  SendMessage.hs  SendPoll.hs  SendVenue.hs  SendVideoNote.hs  SendVoice.hs  SetChatAdministratorCustomTitle.hs  SetChatMenuButton.hs  SetChatPermissions.hs  SetChatStickerSet.hs  SetChatTitle.hs  SetMyCommands.hs  UnbanChatMember.hs  UnbanChatSenderChat.hs
src/Telegram/Bot/API/Types/: Animation.hs  Audio.hs  BotCommand.hs  CallbackGame.hs  CallbackQuery.hs  Chat.hs  Chat.hs-boot  ChatAdministratorRights.hs  ChatInviteLink.hs  ChatJoinRequest.hs  ChatLocation.hs  ChatMember.hs  ChatMemberUpdated.hs  ChatPermissions.hs  ChatPhoto.hs  ChatShared.hs  Contact.hs  CopyMessageId.hs  Dice.hs  Document.hs  EncryptedCredentials.hs  EncryptedPassportElement.hs  File.hs  ForceReply.hs  ForumTopic.hs  ForumTopicClosed.hs  ForumTopicCreated.hs  ForumTopicEdited.hs  ForumTopicReopened.hs  Game.hs  GameHighScore.hs  GeneralForumTopicHidden.hs  GeneralForumTopicUnhidden.hs  InlineKeyboardButton.hs  InlineKeyboardMarkup.hs  InputMedia.hs  Invoice.hs  KeyboardButton.hs  KeyboardButtonRequestChat.hs  KeyboardButtonRequestUser.hs  (+40 more)
src/Telegram/Bot/Simple/: BotApp.hs  Conversation.hs  Debug.hs  Eff.hs  Instances.hs  Reply.hs  ReplyDocuments.hs  UpdateParser.hs
src/Telegram/Bot/Simple/BotApp/: Internal.hs
telegram-bot-api/: CHANGELOG.md  LICENSE  telegram-bot-api.cabal
telegram-bot-api/src/Telegram/Bot/: API.hs
telegram-bot-api/src/Telegram/Bot/API/: Forum.hs  Games.hs  GettingUpdates.hs  InlineMode.hs  MakingRequests.hs  Methods.hs  Passport.hs  Payments.hs  Stickers.hs  Types.hs  UpdatingMessages.hs  WebApps.hs  Webhook.hs
telegram-bot-api/src/Telegram/Bot/API/InlineMode/: InlineQueryResult.hs  InputMessageContent.hs
telegram-bot-api/src/Telegram/Bot/API/Internal/: TH.hs  Utils.hs
telegram-bot-api/src/Telegram/Bot/API/Methods/: AnswerCallbackQuery.hs  BanChatMember.hs  CopyMessage.hs  CopyMessages.hs  CreateChatInviteLink.hs  DeclineChatJoinRequest.hs  DeleteChatStickerSet.hs  DeleteMessages.hs  DeleteMyCommands.hs  DeleteStickerSet.hs  EditChatInviteLink.hs  EditMessageLiveLocation.hs  ForwardMessage.hs  ForwardMessages.hs  GetBusinessConnection.hs  GetChat.hs  GetChatAdministrators.hs  GetChatMember.hs  GetChatMemberCount.hs  GetChatMenuButton.hs  GetMyCommands.hs  GetMyDefaultAdministratorRights.hs  GetMyDescription.hs  GetMyName.hs  GetMyShortDescription.hs  GetUserChatBoosts.hs  GetUserProfilePhotos.hs  LeaveChat.hs  PinChatMessage.hs  PromoteChatMember.hs  RestrictChatMember.hs  RevokeChatInviteLink.hs  SendAnimation.hs  SendAudio.hs  SendChatAction.hs  SendContact.hs  SendDice.hs  SendDocument.hs  SendLocation.hs  SendMediaGroup.hs  (+29 more)
telegram-bot-api/src/Telegram/Bot/API/Types/: Animation.hs  Audio.hs  BackgroundFill.hs  BackgroundType.hs  Birthdate.hs  BotCommand.hs  BotCommandScope.hs  BotDescription.hs  BotName.hs  BotShortDescription.hs  BusinessConnection.hs  BusinessIntro.hs  BusinessLocation.hs  BusinessMessagesDeleted.hs  BusinessOpeningHours.hs  BusinessOpeningHoursInterval.hs  CallbackGame.hs  CallbackQuery.hs  Chat.hs  ChatAdministratorRights.hs  ChatBackground.hs  ChatBoost.hs  ChatBoostAdded.hs  ChatBoostRemoved.hs  ChatBoostSource.hs  ChatBoostUpdated.hs  ChatFullInfo.hs  ChatInviteLink.hs  ChatJoinRequest.hs  ChatLocation.hs  ChatMember.hs  ChatMemberUpdated.hs  ChatShared.hs  ChatType.hs  Common.hs  CopyMessageId.hs  Document.hs  EncryptedCredentials.hs  ExternalReplyInfo.hs  ExternalReplyInfo.hs-boot  (+59 more)
telegram-bot-simple/: CHANGELOG.md  LICENSE  README.md  telegram-bot-simple.cabal
telegram-bot-simple/examples/: EchoBot.hs  EchoBotWebhook.hs  GameBot.hs  game-server-settings.dhall
telegram-bot-simple/src/Telegram/Bot/: Simple.hs
telegram-bot-simple/src/Telegram/Bot/Simple/: BotApp.hs  Conversation.hs  Debug.hs  Eff.hs  InlineKeyboard.hs  Reply.hs  RunTG.hs  UpdateParser.hs  Webhook.hs
telegram-bot-simple/src/Telegram/Bot/Simple/BotApp/: Internal.hs
