name:                telegram-bot-simple
version:             0.1
synopsis:            Easy to use library for building Telegram bots.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:
    Telegram.Bot.API
    Telegram.Bot.API.Internal.Utils
    Telegram.Bot.API.Games
    Telegram.Bot.API.GettingUpdates
    Telegram.Bot.API.InlineMode
    Telegram.Bot.API.Methods
    Telegram.Bot.API.Payments
    Telegram.Bot.API.Stickers
    Telegram.Bot.API.Types
    Telegram.Bot.API.UpdatingMessages
    Telegram.Bot.Simple
  build-depends:
                base
              , aeson
              , http-api-data
              , http-client
              , http-client-tls
              , mtl
              , servant
              , servant-client
              , split
              , text
              , time
              , transformers
  default-language: Haskell2010
