name:                telegram-bot-simple
version:             0.1
synopsis:            Easy to use library for building Telegram bots.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -Wall
  hs-source-dirs:      src/
  exposed-modules:
    Telegram.Bot.API
    Telegram.Bot.API.Internal.Utils
    Telegram.Bot.API.Games
    Telegram.Bot.API.GettingUpdates
    Telegram.Bot.API.InlineMode
    Telegram.Bot.API.Methods
    Telegram.Bot.API.Payments
    Telegram.Bot.API.Stickers
    Telegram.Bot.API.Types
    Telegram.Bot.API.UpdatingMessages
    Telegram.Bot.Simple
    Telegram.Bot.Simple.UpdateParser
  build-depends:
                base
              , aeson
              , hashable
              , http-api-data
              , http-client
              , http-client-tls
              , monad-control
              , mtl
              , profunctors
              , servant
              , servant-client
              , split
              , stm
              , text
              , time
              , transformers
              , unordered-containers
  default-language: Haskell2010

executable example-echo-bot
  ghc-options: -Wall
  main-is: examples/EchoBot.hs
  build-depends:
                base
              , telegram-bot-simple
  default-language: Haskell2010

executable example-todo-bot
  ghc-options: -Wall
  main-is: examples/TodoBot.hs
  build-depends:
                base
              , telegram-bot-simple
  default-language: Haskell2010