cabal-version: 1.12

name:           telegram-bot-api
version:        7.3
synopsis:       Easy to use library for building Telegram bots. Exports Telegram Bot API.
description:    Please see the README on Github at <https://github.com/fizruk/telegram-bot-simple#readme>
                .
                For official Bot API see Telegram Bot API at <https://core.telegram.org/bots/api>
category:       Web
homepage:       https://github.com/fizruk/telegram-bot-simple#readme
bug-reports:    https://github.com/fizruk/telegram-bot-simple/issues
author:         Nickolay Kudasov
maintainer:     nickolay.kudasov@gmail.com
copyright:      Nickolay Kudasov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/fizruk/telegram-bot-simple

library
  exposed-modules:
      -- API
      Telegram.Bot.API
      Telegram.Bot.API.Chat
      Telegram.Bot.API.Forum
      Telegram.Bot.API.Games
      Telegram.Bot.API.GettingUpdates
      Telegram.Bot.API.InlineMode
      Telegram.Bot.API.InlineMode.InlineQueryResult
      Telegram.Bot.API.InlineMode.InputMessageContent
      Telegram.Bot.API.Internal.Utils
      Telegram.Bot.API.Internal.TH
      Telegram.Bot.API.MakingRequests
      -- Methods
      Telegram.Bot.API.Methods
      Telegram.Bot.API.Methods.AnswerCallbackQuery
      Telegram.Bot.API.Methods.ApproveChatJoinRequest
      Telegram.Bot.API.Methods.BanChatMember
      Telegram.Bot.API.Methods.BanChatSenderChat
      Telegram.Bot.API.Methods.CopyMessage
      Telegram.Bot.API.Methods.CopyMessages
      Telegram.Bot.API.Methods.CreateChatInviteLink
      Telegram.Bot.API.Methods.DeclineChatJoinRequest
      Telegram.Bot.API.Methods.DeleteChatPhoto
      Telegram.Bot.API.Methods.DeleteChatStickerSet
      Telegram.Bot.API.Methods.DeleteMessage
      Telegram.Bot.API.Methods.DeleteMessages
      Telegram.Bot.API.Methods.DeleteMyCommands
      Telegram.Bot.API.Methods.DeleteStickerSet
      Telegram.Bot.API.Methods.EditChatInviteLink
      Telegram.Bot.API.Methods.EditMessageLiveLocation
      Telegram.Bot.API.Methods.ExportChatInviteLink
      Telegram.Bot.API.Methods.ForwardMessage
      Telegram.Bot.API.Methods.ForwardMessages
      Telegram.Bot.API.Methods.GetBusinessConnection
      Telegram.Bot.API.Methods.GetChat
      Telegram.Bot.API.Methods.GetChatAdministrators
      Telegram.Bot.API.Methods.GetChatMember
      Telegram.Bot.API.Methods.GetChatMemberCount
      Telegram.Bot.API.Methods.GetChatMenuButton
      Telegram.Bot.API.Methods.GetFile
      Telegram.Bot.API.Methods.GetMe
      Telegram.Bot.API.Methods.GetMyCommands
      Telegram.Bot.API.Methods.GetMyDefaultAdministratorRights
      Telegram.Bot.API.Methods.GetMyDescription
      Telegram.Bot.API.Methods.GetMyName
      Telegram.Bot.API.Methods.GetMyShortDescription
      Telegram.Bot.API.Methods.GetUserChatBoosts
      Telegram.Bot.API.Methods.GetUserProfilePhotos
      Telegram.Bot.API.Methods.LeaveChat
      Telegram.Bot.API.Methods.PinChatMessage
      Telegram.Bot.API.Methods.PromoteChatMember
      Telegram.Bot.API.Methods.RestrictChatMember
      Telegram.Bot.API.Methods.RevokeChatInviteLink
      Telegram.Bot.API.Methods.SendAnimation
      Telegram.Bot.API.Methods.SendAudio
      Telegram.Bot.API.Methods.SendChatAction
      Telegram.Bot.API.Methods.SendContact
      Telegram.Bot.API.Methods.SendDice
      Telegram.Bot.API.Methods.SendDocument
      Telegram.Bot.API.Methods.SendLocation
      Telegram.Bot.API.Methods.SendMediaGroup
      Telegram.Bot.API.Methods.SendMessage
      Telegram.Bot.API.Methods.SendPhoto
      Telegram.Bot.API.Methods.SendPoll
      Telegram.Bot.API.Methods.SendVenue
      Telegram.Bot.API.Methods.SendVideo
      Telegram.Bot.API.Methods.SendVideoNote
      Telegram.Bot.API.Methods.SendVoice
      Telegram.Bot.API.Methods.SetChatAdministratorCustomTitle
      Telegram.Bot.API.Methods.SetChatDescription
      Telegram.Bot.API.Methods.SetChatMenuButton
      Telegram.Bot.API.Methods.SetChatPermissions
      Telegram.Bot.API.Methods.SetChatPhoto
      Telegram.Bot.API.Methods.SetChatStickerSet
      Telegram.Bot.API.Methods.SetChatTitle
      Telegram.Bot.API.Methods.SetMessageReaction
      Telegram.Bot.API.Methods.SetMyCommands
      Telegram.Bot.API.Methods.SetCustomEmojiStickerSetThumbnail
      Telegram.Bot.API.Methods.SetMyDefaultAdministratorRights
      Telegram.Bot.API.Methods.SetMyDescription
      Telegram.Bot.API.Methods.SetMyName
      Telegram.Bot.API.Methods.SetMyShortDescription
      Telegram.Bot.API.Methods.SetStickerEmojiList
      Telegram.Bot.API.Methods.SetStickerKeywords
      Telegram.Bot.API.Methods.SetStickerMaskPosition
      Telegram.Bot.API.Methods.SetStickerSetTitle
      Telegram.Bot.API.Methods.StopMessageLiveLocation
      Telegram.Bot.API.Methods.UnbanChatMember
      Telegram.Bot.API.Methods.UnbanChatSenderChat
      Telegram.Bot.API.Methods.UnpinAllChatMessages
      Telegram.Bot.API.Methods.UnpinChatMessage

      Telegram.Bot.API.Passport
      Telegram.Bot.API.Payments
      Telegram.Bot.API.Stickers
      Telegram.Bot.API.Types
      -- Types
      Telegram.Bot.API.Types.Animation
      Telegram.Bot.API.Types.Audio
      Telegram.Bot.API.Types.BackgroundFill
      Telegram.Bot.API.Types.BackgroundType
      Telegram.Bot.API.Types.Birthdate
      Telegram.Bot.API.Types.BotCommand
      Telegram.Bot.API.Types.BotCommandScope
      Telegram.Bot.API.Types.BotDescription
      Telegram.Bot.API.Types.BotName
      Telegram.Bot.API.Types.BotShortDescription
      Telegram.Bot.API.Types.BusinessConnection
      Telegram.Bot.API.Types.BusinessIntro
      Telegram.Bot.API.Types.BusinessMessagesDeleted
      Telegram.Bot.API.Types.BusinessLocation
      Telegram.Bot.API.Types.BusinessOpeningHours
      Telegram.Bot.API.Types.BusinessOpeningHoursInterval
      Telegram.Bot.API.Types.CallbackGame
      Telegram.Bot.API.Types.CallbackQuery
      Telegram.Bot.API.Types.Chat
      Telegram.Bot.API.Types.ChatAdministratorRights
      Telegram.Bot.API.Types.ChatBackground
      Telegram.Bot.API.Types.ChatBoost
      Telegram.Bot.API.Types.ChatBoostAdded
      Telegram.Bot.API.Types.ChatBoostRemoved
      Telegram.Bot.API.Types.ChatBoostSource
      Telegram.Bot.API.Types.ChatBoostUpdated
      Telegram.Bot.API.Types.ChatFullInfo
      Telegram.Bot.API.Types.ChatInviteLink
      Telegram.Bot.API.Types.ChatJoinRequest
      Telegram.Bot.API.Types.ChatLocation
      Telegram.Bot.API.Types.ChatMember
      Telegram.Bot.API.Types.ChatMemberUpdated
      Telegram.Bot.API.Types.ChatPermissions
      Telegram.Bot.API.Types.ChatPhoto
      Telegram.Bot.API.Types.ChatShared
      Telegram.Bot.API.Types.ChatType
      Telegram.Bot.API.Types.Common
      Telegram.Bot.API.Types.Contact
      Telegram.Bot.API.Types.CopyMessageId
      Telegram.Bot.API.Types.Dice
      Telegram.Bot.API.Types.Document
      Telegram.Bot.API.Types.EncryptedCredentials
      Telegram.Bot.API.Types.EncryptedPassportElement
      Telegram.Bot.API.Types.ExternalReplyInfo
      Telegram.Bot.API.Types.File
      Telegram.Bot.API.Types.ForceReply
      Telegram.Bot.API.Types.ForumTopic
      Telegram.Bot.API.Types.ForumTopicEdited
      Telegram.Bot.API.Types.ForumTopicClosed
      Telegram.Bot.API.Types.ForumTopicCreated
      Telegram.Bot.API.Types.ForumTopicReopened
      Telegram.Bot.API.Types.Game
      Telegram.Bot.API.Types.GameHighScore
      Telegram.Bot.API.Types.Giveaway
      Telegram.Bot.API.Types.GiveawayCompleted
      Telegram.Bot.API.Types.GiveawayCreated
      Telegram.Bot.API.Types.GiveawayWinners
      Telegram.Bot.API.Types.GeneralForumTopicHidden
      Telegram.Bot.API.Types.GeneralForumTopicUnhidden
      Telegram.Bot.API.Types.InlineKeyboardButton
      Telegram.Bot.API.Types.InlineKeyboardMarkup
      Telegram.Bot.API.Types.InputMedia
      Telegram.Bot.API.Types.InputPollOption
      Telegram.Bot.API.Types.Invoice
      Telegram.Bot.API.Types.KeyboardButton
      Telegram.Bot.API.Types.KeyboardButtonRequestChat
      Telegram.Bot.API.Types.KeyboardButtonRequestUsers
      Telegram.Bot.API.Types.LabeledPrice
      Telegram.Bot.API.Types.LinkPreviewOptions
      Telegram.Bot.API.Types.Location
      Telegram.Bot.API.Types.LoginUrl
      Telegram.Bot.API.Types.MaskPosition
      Telegram.Bot.API.Types.MenuButton
      Telegram.Bot.API.Types.Message
      Telegram.Bot.API.Types.MessageAutoDeleteTimerChanged
      Telegram.Bot.API.Types.MessageEntity
      Telegram.Bot.API.Types.MessageOrigin
      Telegram.Bot.API.Types.MessageReactionCountUpdated
      Telegram.Bot.API.Types.MessageReactionUpdated
      Telegram.Bot.API.Types.OrderInfo
      Telegram.Bot.API.Types.ParseMode
      Telegram.Bot.API.Types.PassportData
      Telegram.Bot.API.Types.PassportElementError
      Telegram.Bot.API.Types.PassportFile
      Telegram.Bot.API.Types.PhotoSize
      Telegram.Bot.API.Types.Poll
      Telegram.Bot.API.Types.PollAnswer
      Telegram.Bot.API.Types.PollOption
      Telegram.Bot.API.Types.PollType
      Telegram.Bot.API.Types.PreCheckoutQuery
      Telegram.Bot.API.Types.ProximityAlertTriggered
      Telegram.Bot.API.Types.ReactionCount
      Telegram.Bot.API.Types.ReactionType
      Telegram.Bot.API.Types.ReplyKeyboardMarkup
      Telegram.Bot.API.Types.ReplyKeyboardRemove
      Telegram.Bot.API.Types.ReplyParameters
      Telegram.Bot.API.Types.ResponseParameters
      Telegram.Bot.API.Types.SharedUser
      Telegram.Bot.API.Types.ShippingAddress
      Telegram.Bot.API.Types.ShippingOption
      Telegram.Bot.API.Types.ShippingQuery
      Telegram.Bot.API.Types.SomeReplyMarkup
      Telegram.Bot.API.Types.Sticker
      Telegram.Bot.API.Types.Story
      Telegram.Bot.API.Types.SuccessfulPayment
      Telegram.Bot.API.Types.SwitchInlineQueryChosenChat
      Telegram.Bot.API.Types.TextQuote
      Telegram.Bot.API.Types.User
      Telegram.Bot.API.Types.UserChatBoosts
      Telegram.Bot.API.Types.UserProfilePhotos
      Telegram.Bot.API.Types.UserShared
      Telegram.Bot.API.Types.UsersShared
      Telegram.Bot.API.Types.Venue
      Telegram.Bot.API.Types.Video
      Telegram.Bot.API.Types.VideoChatEnded
      Telegram.Bot.API.Types.VideoChatScheduled
      Telegram.Bot.API.Types.VideoChatStarted
      Telegram.Bot.API.Types.VideoNote
      Telegram.Bot.API.Types.Voice
      Telegram.Bot.API.Types.WebAppData
      Telegram.Bot.API.Types.WriteAccessAllowed
      Telegram.Bot.API.UpdatingMessages
      Telegram.Bot.API.WebApps
      Telegram.Bot.API.Webhook
  other-modules:
      Paths_telegram_bot_api
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.16 && <5
    , bytestring
    , cron >=0.7.0
    , filepath
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , monad-control
    , mtl
    , pretty-show
    , profunctors
    , servant
    , servant-client
    , servant-multipart-api
    , servant-multipart-client
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , warp
    , warp-tls
  default-language: Haskell2010
  default-extensions:
    TemplateHaskell
