cabal-version: 1.12

name:           telegram-bot-simple
version:        0.14
synopsis:       Easy to use library for building Telegram bots.
description:    Please see the README on Github at <https://github.com/fizruk/telegram-bot-simple#readme>
category:       Web
homepage:       https://github.com/fizruk/telegram-bot-simple#readme
bug-reports:    https://github.com/fizruk/telegram-bot-simple/issues
author:         Nickolay Kudasov
maintainer:     nickolay.kudasov@gmail.com, Andrey Prokopenko <persiantiger@yandex.ru>
copyright:      Nickolay Kudasov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/fizruk/telegram-bot-simple

flag examples
  description: Build examples
  manual: True
  default: False

library
  exposed-modules:
      -- Telegram Bot Simple
      Telegram.Bot.Simple
      Telegram.Bot.Simple.BotApp
      Telegram.Bot.Simple.BotApp.Internal
      Telegram.Bot.Simple.Conversation
      Telegram.Bot.Simple.Debug
      Telegram.Bot.Simple.Eff
      Telegram.Bot.Simple.InlineKeyboard
      Telegram.Bot.Simple.Instances
      Telegram.Bot.Simple.Reply
      Telegram.Bot.Simple.RunTG
      Telegram.Bot.Simple.UpdateParser
      Telegram.Bot.Simple.Webhook
  other-modules:
      Paths_telegram_bot_simple
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , aeson-pretty
    , async
    , base >=4.9 && <5
    , bytestring
    , cron >=0.7.0
    , filepath
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , monad-control
    , mtl
    , pretty-show
    , profunctors
    , servant
    , servant-client
    , servant-multipart-api
    , servant-multipart-client
    , servant-server
    , split
    , stm
    , template-haskell
    , telegram-bot-api >= 7.3
    , text
    , time
    , transformers
    , unordered-containers
    , warp
    , warp-tls
  default-language: Haskell2010

executable example-echo-bot
  main-is: examples/EchoBot.hs
  other-modules:
      Paths_telegram_bot_simple
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.9 && <5
    , bytestring
    , cron >=0.7.0
    , filepath
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , monad-control
    , mtl
    , pretty-show
    , profunctors
    , servant
    , servant-client
    , servant-multipart-api
    , servant-multipart-client
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , warp
    , warp-tls
  default-language: Haskell2010
  if flag(examples)
    build-depends:
        telegram-bot-simple
      , telegram-bot-api >= 7.3
  else
    buildable: False

executable example-echo-bot-webhook
  main-is: examples/EchoBotWebhook.hs
  other-modules:
      Paths_telegram_bot_simple
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.9 && <5
    , bytestring
    , cron >=0.7.0
    , filepath
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , monad-control
    , mtl
    , pretty-show
    , profunctors
    , servant
    , servant-client
    , servant-multipart-api
    , servant-multipart-client
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , warp
    , warp-tls
  default-language: Haskell2010
  if flag(examples)
    build-depends:
        telegram-bot-simple
      , telegram-bot-api >= 7.3
  else
    buildable: False

executable example-game-bot
  main-is: examples/GameBot.hs
  other-modules:
      Paths_telegram_bot_simple
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.9 && <5
    , bytestring
    , cron >=0.7.0
    , filepath
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , monad-control
    , mtl
    , pretty-show
    , profunctors
    , servant
    , servant-client
    , servant-multipart-api
    , servant-multipart-client
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , warp
    , warp-tls
  default-language: Haskell2010
  if flag(examples)
    build-depends:
        QuickCheck
      , blaze-html
      , cookie
      , dhall
      , http-types
      , optparse-applicative
      , prettyprinter
      , random
      , servant-blaze
      , servant-server
      , signal
      , telegram-bot-simple
      , telegram-bot-api >= 7.3
      , uuid
      , warp
  else
    buildable: False

executable example-todo-bot
  main-is: examples/TodoBot.hs
  other-modules:
      Paths_telegram_bot_simple
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.9 && <5
    , bytestring
    , cron >=0.7.0
    , filepath
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , monad-control
    , mtl
    , pretty-show
    , profunctors
    , servant
    , servant-client
    , servant-multipart-api
    , servant-multipart-client
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , warp
    , warp-tls
  default-language: Haskell2010
  if flag(examples)
    build-depends:
        telegram-bot-simple
      , telegram-bot-api >= 7.3
  else
    buildable: False
